// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./index.stories WithTokenLogo 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <span
        class="container verticalAlign"
        data-slot="tooltip-trigger"
        id="base-ui-_r_1_"
      >
        <div
          class="relative"
        >
          <iframe
            height="26"
            loading="lazy"
            referrerpolicy="strict-origin"
            sandbox="allow-scripts"
            srcdoc="
    <body style="margin: 0; overflow: hidden; display: flex; align-items: center; justify-content: center;">
      <img src="https://safe-transaction-assets.staging.5afe.dev/chains/1/currency_logo.png" alt="Safe App logo" height="26" width="auto" style="" />
      <script>
        document.querySelector('img').onerror = (e) => {
          e.target.onerror = null
          e.target.src = "/images/common/token-placeholder.svg"
        }
      </script>
    </body>
  "
            style="pointer-events: none; border: 0px; display: block;"
            tabindex="-1"
            title="ETH"
            width="26"
          />
        </div>
        <b
          class="tokenText"
        >
          100
           
          ETH
        </b>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories WithoutTokenLogo 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-card p-4"
    >
      <span
        class="container"
        data-slot="tooltip-trigger"
        id="base-ui-_r_3_"
      >
        <b
          class="tokenText"
        >
          100
           
          ETH
        </b>
      </span>
    </div>
  </div>
</div>
`;
